Fixed navigation to signup/login. Also added some text to contact_us and spiffed up alignment and padding of a few things.

--- a/app/assets/stylesheets/contact_us.css.scss
+++ b/app/assets/stylesheets/contact_us.css.scss
@@ -1,3 +1,10 @@
+h1 {
+  text-align: center;
+}
+
+h1, #contact_us_intro, #from, #subject {
+  width: 400px;
+}
 
 #message {
   height: 200px;
